@@ -78,10 +78,10 @@ public class MovieMenu extends Menu {
   public List<Movie> getViewableMovies() {
     List<Movie> movies = handler.getMovies();
 
-    List<ShowStatus> unbookableStatus = Arrays.asList(ShowStatus.END_SHOWING, ShowStatus.COMING_SOON);
+    List<ShowStatus> unlistedStatus = List.of(ShowStatus.END_SHOWING);
     if (showLimitedMovies && movies.size() > 0) {
       movies = movies.stream()
-          .filter(m -> !unbookableStatus.contains(m.getShowStatus()))
+          .filter(m -> !unlistedStatus.contains(m.getShowStatus()))
           .collect(Collectors.toList());
     }
     return movies;
@@ -126,7 +126,7 @@ public class MovieMenu extends Menu {
       int movieIdx = handler.getMovieIdx(movie.getId());
       menuMap.put((i + 1) + ". " + movie.getTitle(), () -> {
         handler.setSelectedMovieIdx(movieIdx);
-        handler.printMovieDetails(movieIdx);
+        handler.printMovieDetails(movieIdx, false);
 
         if (showReviews) {
           if (addMovieRunnable != null) addMovieRunnable.run();
@@ -419,12 +419,7 @@ public class MovieMenu extends Menu {
           }
         }
 
-
-        if (prevStatus == curStatus) {
-          System.out.println(colorizer("[NO CHANGE] Rating: " + prevStatus, Preset.SUCCESS));
-        } else {
-          System.out.println(colorizer("[UPDATED] Rating: " + prevStatus + " -> " + curStatus, Preset.SUCCESS));
-        }
+        this.printChanges("Rating: ", (prevStatus == curStatus), Integer.toString(prevStatus), Integer.toString(curStatus));
       }
 
       // Set review
@@ -437,14 +432,9 @@ public class MovieMenu extends Menu {
 
         System.out.print("Set to:");
         String curStatus = scanner.next().trim();
-
         review.setReview(curStatus);
 
-        if (prevStatus.equals(curStatus)) {
-          System.out.println(colorizer("[NO CHANGE] Review: " + prevStatus, Preset.SUCCESS));
-        } else {
-          System.out.println(colorizer("[UPDATED] Review: " + prevStatus + " -> " + curStatus, Preset.SUCCESS));
-        }
+        this.printChanges("Review: ", prevStatus.equals(curStatus), prevStatus, curStatus);
       }
 
     }
@@ -452,6 +442,11 @@ public class MovieMenu extends Menu {
     return status;
   }
 
+  /**
+   * Sets blockbuster status.
+   *
+   * @return the blockbuster status
+   */
   public boolean setBlockbusterStatus() {
     List<String> updateOptions = new ArrayList<String>() {
       {
@@ -467,6 +462,11 @@ public class MovieMenu extends Menu {
     return (selectionIdx == 0);
   }
 
+  /**
+   * Sets show status.
+   *
+   * @return the show status
+   */
   public ShowStatus setShowStatus() {
     List<ShowStatus> showStatuses = new ArrayList<ShowStatus>(EnumSet.allOf(ShowStatus.class));
     List<String> updateOptions = Stream.of(ShowStatus.values()).map(Enum::toString).collect(Collectors.toList());
@@ -478,6 +478,11 @@ public class MovieMenu extends Menu {
     return showStatuses.get(selectionIdx);
   }
 
+  /**
+   * Sets content rating.
+   *
+   * @return the content rating
+   */
   public ContentRating setContentRating() {
     List<String> updateOptions = Stream.of(ContentRating.values()).map(Enum::name).collect(Collectors.toList());
     System.out.println("Set to:");
@@ -489,6 +494,11 @@ public class MovieMenu extends Menu {
     return contentRatings.get(selectionIdx);
   }
 
+  /**
+   * Sets cast list.
+   *
+   * @return the cast list
+   */
   public List<String> setCastList() {
     List<String> castList = new ArrayList<String>();
 
@@ -644,6 +654,11 @@ public class MovieMenu extends Menu {
     return status;
   }
 
+  /**
+   * Create movie int.
+   *
+   * @return the int
+   */
   public int createMovie() {
     int movieIdx = -1;
 
@@ -689,7 +704,7 @@ public class MovieMenu extends Menu {
       else System.out.println(colorizer("[SUCCESS] Added new movie", Preset.SUCCESS));
 
       // Display movie
-      handler.printMovieDetails(movieIdx);
+      handler.printMovieDetails(movieIdx, false);
     }
 
     return movieIdx;
